deployment/k8s/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: infr-training
  labels:
    app: nginx
spec:
  replicas: 2                    # Две реплики для HA
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25-alpine
        ports:
        - containerPort: 80
        resources:              # Важно! На проде всегда указывай
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:          # Проверка что под жив
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 10
        readinessProbe:         # Готов ли принимать трафик
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
