deployment/k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: infr-training
  annotations:
    # K3s использует Traefik по умолчанию
spec:
  rules:
  - host: nginx.local          # Временно для теста
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
